tests/sksl/errors/WhileTypeMismatch.dsl.glsl
### Compilation failed:

error: expected 'bool', but found 'float3'

1 error
